Added more GUI for animal management, created Animal class

--- a/Class-Library/Class-Library.csproj
+++ b/Class-Library/Class-Library.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Class_Library</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Database Access\" />
+  </ItemGroup>
+
 </Project>
