Created data access classes, tested

--- a/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
+++ b/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
@@ -7,4 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Class-Library\Class-Library.csproj" />
+  </ItemGroup>
+
 </Project>
