--- a/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
+++ b/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Class-Library\Class-Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Shift Management.cs" />
+  </ItemGroup>
+
 </Project>
