Fixed bug with Rmoving filtered items, added assigning manager functionality

--- a/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
+++ b/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Class-Library\Class-Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Habitat Details.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
