Added HTML and CSS for basic layout of hte website, removed Bootstrap

--- a/ZooBazaar-SAIA-Web/ZooBazaar-SAIA-Web.csproj
+++ b/ZooBazaar-SAIA-Web/ZooBazaar-SAIA-Web.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>ZooBazaar_SAIA_Web</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Class-Library\Class-Library.csproj" />
+  </ItemGroup>
+
 </Project>
