--- a/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
+++ b/ZooBazaar-SAIA-Desktop/ZooBazaar-SAIA-Desktop.csproj
@@ -8,6 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <COMReference Include="Microsoft.Office.Interop.Outlook">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>6</VersionMinor>
+      <VersionMajor>9</VersionMajor>
+      <Guid>00062fff-0000-0000-c000-000000000046</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Class-Library\Class-Library.csproj" />
   </ItemGroup>
 
